crates/nash-parse/src/expression/snapshots/nash_parse__expression__number__tests__error_float_nonzero.snap
---
source: crates/nash-parse/src/expression/number.rs
description: "Code:\n\n1.5"
info: diagnostic
---
nash::syntax

  × Floating point numbers are not supported.
   ╭─[src/Main.nash:1:2]
 1 │ 1.5
   ·  ─
   ╰────
  help: Use an integer such as `1`.
