crates/nash-parse/src/expression/snapshots/nash_parse__expression__number__tests__error_float_zero.snap
---
source: crates/nash-parse/src/expression/number.rs
description: "Code:\n\n0.5"
---
Number(
    Dot(
        0,
    ),
    1,
    2,
)
