crates/nash-parse/src/expression/snapshots/nash_parse__expression__number__tests__error_hex_no_digits.snap
---
source: crates/nash-parse/src/expression/number.rs
description: "Code:\n\n0x"
info: diagnostic
---
nash::syntax

  × Expected a hexadecimal digit.
   ╭─[src/Main.nash:1:3]
 1 │ 0x
   ·   ─
   ╰────
  help: Use digits from `0123456789abcdefABCDEF`.
