crates/nash-parse/src/expression/snapshots/nash_parse__expression__number__tests__error_leading_zero.snap
---
source: crates/nash-parse/src/expression/number.rs
description: "Code:\n\n007"
info: diagnostic
---
nash::syntax

  × Integer has leading zeros.
   ╭─[src/Main.nash:1:2]
 1 │ 007
   ·  ─
   ╰────
  help: Remove the leading zeros.
